<?xml version="1.0"?>
<package format="2">

	<name>kacanopen</name>
	<version>0.2.5</version>
	<description>KaCanOpen: An Open Plug&amp;Play CANopen Stack for ROS in Modern C++</description>
	<maintainer email="thomas.keh@student.kit.edu">Thomas Keh</maintainer>
	<author email="thomas.keh@student.kit.edu">Thomas Keh</author>
	<license>BSD</license>
	<url type="website">https://github.com/KITmedical/kacanopen</url>

	<buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
