cmake_minimum_required(VERSION 2.8)

message(STATUS "Configuring lincan driver")

set(TARGET_NAME can_lincan)

file(GLOB TARGET_SRC
	"*.c"
)

add_library(${TARGET_NAME} SHARED ${TARGET_SRC})

# Install
# Install
install(TARGETS ${TARGET_NAME}
  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
)
