cmake_minimum_required(VERSION 2.8)

message(STATUS "Configuring socket driver")

set(LIB_NAME can_socket)

file(GLOB TARGET_SRC
	"*.c"
)

add_library(${LIB_NAME} SHARED ${TARGET_SRC})

# Install
install(TARGETS ${LIB_NAME}
  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
)
